<package>
 <name> kdl_wrapper </name>
  <version>0.1.0</version>
  <description>
    C++ wrapper for easily using KDL kinematic solvers with robots defined in ROS through URDF files. Wraps the kdl and kdl_parser packages for generating KDL kinematic chains from URDF by just taking as inputs the IDs of the root and tip of the kinematic chain of a robot manipulator.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kdl_wrapper</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_acc_solver</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_acc_solver</run_depend>

</package>

